OpsWorksHandson/opsworks-handson-cf.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Parameters" : {
    "KeyName": {
    "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the instances",
      "Type": "String",
      "MinLength": "1",
      "MaxLength": "255",
      "AllowedPattern" : "[\\x20-\\x7E]*",
      "ConstraintDescription" : "can contain only ASCII characters."
    }
  },
  "Resources": {
    "vpcdb7394be": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": "OpsWorksVPC"
          }
        ]
      }
    },
    "subnetc0081bb4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.3.0/24",
        "AvailabilityZone": "us-east-1b",
        "VpcId": {
          "Ref": "vpcdb7394be"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivateSubnet2"
          }
        ]
      }
    },
    "subnetd7261791": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone": "us-east-1c",
        "VpcId": {
          "Ref": "vpcdb7394be"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PrivateSubnet1"
          }
        ]
      }
    },
    "PublicSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": "us-east-1c",
        "VpcId": {
          "Ref": "vpcdb7394be"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "PublicSubnet"
          }
        ]
      }
    },
    "igw1906157b": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "OpsWorksIGW"
          }
        ]
      }
    },
    "doptd18ee2b9": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "us-east-1.compute.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "acl955cbaf0": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdb7394be"
        }
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdb7394be"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "public"
          }
        ]
      }
    },
    "PublicRoute" : {
      "Type" : "AWS::EC2::Route",
      "DependsOn" : "GatewayToInternet",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PublicRouteTable" },
        "DestinationCidrBlock" : "0.0.0.0/0",
        "GatewayId" : { "Ref" : "igw1906157b" }
      }
    },

    "PublicSubnetRouteTableAssociation" : {
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PublicSubnet" },
        "RouteTableId" : { "Ref" : "PublicRouteTable" }
      }
    },
    "rtba0f011c5": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdb7394be"
        }
      }
    },
    "GitClientEC2Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "FALSE",
        "ImageId": "ami-c9562fc8",
        "InstanceType": "t1.micro",
        "KernelId": "aki-176bf516",
        "KeyName": { "Ref" : "KeyName" },
        "NetworkInterfaces" : [{
          "GroupSet"                 : [{ "Ref" : "sgOpsWorksHandsonSG" }],
          "DeviceIndex"              : "0",
          "AssociatePublicIpAddress" : "true",
          "SubnetId"                 : { "Ref" : "PublicSubnet" }
        }],
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "GitClient"
          }
        ]
      }
    },
    "RdsInstance": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "AutoMinorVersionUpgrade": "true",
        "DBInstanceClass": "db.t1.micro",
        "Port": "3306",
        "AllocatedStorage": "5",
        "BackupRetentionPeriod": "1",
        "DBName": "wordpress",
        "Engine": "mysql",
        "EngineVersion": "5.6.13",
        "LicenseModel": "general-public-license",
        "MasterUsername": "wpuser",
        "MasterUserPassword": "wppassword",
        "PreferredBackupWindow": "18:38-19:08",
        "PreferredMaintenanceWindow": "sun:19:32-sun:20:02",
        "VPCSecurityGroups": [
          {
            "Ref": "sgWordPressDB"
          }
        ],
        "DBSubnetGroupName": {
          "Ref": "dbsubnetrdssubnet"
        },
        "Tags": [
          {
            "Key": "workload-type",
            "Value": "other"
          }
        ]
      }
    },
    "dbsubnetrdssubnet": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Handson",
        "SubnetIds": [
          {
            "Ref": "subnetc0081bb4"
          },
          {
            "Ref": "subnetd7261791"
          }
        ]
      }
    },
    "sgOpsWorksHandsonSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "OpsWorksHandsonSG",
        "VpcId": {
          "Ref": "vpcdb7394be"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "sgWordPressDB": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "WordPressDB",
        "VpcId": {
          "Ref": "vpcdb7394be"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "3306",
            "ToPort": "3306",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress": [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": true,
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl955cbaf0"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl955cbaf0"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl955cbaf0"
        },
        "SubnetId": {
          "Ref": "PublicSubnet"
        }
      }
    },
    "subnetacl2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl955cbaf0"
        },
        "SubnetId": {
          "Ref": "subnetd7261791"
        }
      }
    },
    "subnetacl3": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl955cbaf0"
        },
        "SubnetId": {
          "Ref": "subnetc0081bb4"
        }
      }
    },
    "GatewayToInternet": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdb7394be"
        },
        "InternetGatewayId": {
          "Ref": "igw1906157b"
        }
      }
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpcdb7394be"
        },
        "DhcpOptionsId": {
          "Ref": "doptd18ee2b9"
        }
      }
    }
  },
  "Description": "OpsWorks Handson template",
  "Outputs" : {
    "GitClientPublicDnsName" : {
      "Value" : { "Fn::GetAtt" : [ "GitClientEC2Instance", "PublicDnsName" ] },
      "Description" : "GitClient EC2 instance Public DNS Name"
    },
    "RdsDbInstanceIdentifier" : {
      "Value" : { "Ref" : "RdsInstance" },
      "Description" : "RDS DB Instance Identifier"
    }
  }
}
